<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Jannis Scheibe <jannis@tadris.de>
  ~
  ~ This file is part of FitoTrack
  ~
  ~ FitoTrack is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     FitoTrack is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ListWorkoutsActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workoutList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/workoutListMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="10dp"
        app:menu_animationDelayPerItem="50"
        app:menu_colorNormal="@color/colorPrimary"
        app:menu_colorPressed="@color/colorPrimaryDark"
        app:menu_icon="@drawable/fab_add"
        app:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        app:menu_labels_showAnimation="@anim/fab_slide_in_from_right">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/workoutListRecordRunning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white"
            app:fab_colorNormal="@color/colorPrimaryRunning"
            app:fab_colorPressed="@color/colorPrimaryDarkRunning"
            app:fab_label="@string/workoutTypeRunning"
            app:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/workoutListRecordHiking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white"
            app:fab_colorNormal="@color/colorPrimaryHiking"
            app:fab_colorPressed="@color/colorPrimaryDarkHiking"
            app:fab_label="@string/workoutTypeHiking"
            app:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/workoutListRecordCycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white"
            app:fab_colorNormal="@color/colorPrimaryBicycling"
            app:fab_colorPressed="@color/colorPrimaryDarkBicycling"
            app:fab_label="@string/workoutTypeCycling"
            app:fab_size="normal" />

    </com.github.clans.fab.FloatingActionMenu>


</FrameLayout>